fixed overflow

--- a/src/Styles/UI/Notebook.scss
+++ b/src/Styles/UI/Notebook.scss
@@ -3,6 +3,7 @@ section {
   height: 100vh;
   //background-color: aliceblue;
   position: relative;
+  overflow-x: hidden;
   h1 {
     position: absolute;
     top: 2%;
